test: increase code coverage for product service to >70%